welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:12: error: 'while' expected but '}' found.
	}
        ^